[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/HelpText.tscn" type="PackedScene" id=2]
[ext_resource path="res://scrips/ScreenControl.gd" type="Script" id=3]
[ext_resource path="res://art/Space Shooter files/background/layered/bg-back.png" type="Texture" id=4]
[ext_resource path="res://art/Space Shooter files/background/layered/bg-planet.png" type="Texture" id=5]
[ext_resource path="res://scenes/EnemiesSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Game.gd" type="Script" id=7]
[ext_resource path="res://scenes/entities/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://art/Space Shooter files/music/exports/space-asteroids.ogg" type="AudioStream" id=11]
[ext_resource path="res://art/Space Shooter files/Sound FX/hit.wav" type="AudioStream" id=12]
[ext_resource path="res://art/Space Shooter files/background/layered/bg-stars.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.133333, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "StartText"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.133333, 1, 1 ), Color( 0.0352941, 1, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.933333, 0, 1 ), Color( 0, 0.133333, 1, 1 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0117647, 0.121569, 1 )

[node name="Bg-back" type="Sprite" parent="Background"]
position = Vector2( 192, 108 )
z_index = -1
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 384, 216 )

[node name="Bg-stars" type="Sprite" parent="Background"]
z_index = -1
texture = ExtResource( 14 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 384, 216 )

[node name="Bg-planet" type="Sprite" parent="Background"]
position = Vector2( 192, 136 )
z_index = -1
texture = ExtResource( 5 )

[node name="ScreenControl" type="Node" parent="."]
script = ExtResource( 3 )

[node name="HelpLabel" parent="ScreenControl" instance=ExtResource( 2 )]
margin_left = 3.0
margin_top = 3.0
margin_right = 279.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Press F1 to Toggle Help
Press F11 to Toggle Full Screen
Press ESC to Exit"

[node name="Start" parent="ScreenControl" instance=ExtResource( 2 )]
margin_left = 110.0
margin_top = 190.0
margin_right = 270.0
margin_bottom = 198.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0.133333, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Press Space to Start"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenControl/Start"]
playback_speed = 3.0
anims/RESET = SubResource( 2 )
anims/StartText = SubResource( 3 )

[node name="Title" parent="ScreenControl/Start" instance=ExtResource( 2 )]
margin_left = -50.0
margin_top = -136.0
margin_right = 86.0
margin_bottom = -128.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "WEA en el ESPASIO"
align = 1
valign = 1

[node name="AudioStartGame" type="AudioStreamPlayer" parent="ScreenControl"]
stream = ExtResource( 12 )

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 111, -30 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="EnemiesSpawner" parent="." instance=ExtResource( 6 )]

[connection signal="game_Start" from="ScreenControl" to="Player" method="_on_ScreenControl_game_Start"]
